# MERMaid

./: .gitignore  MERMES2.0_todo.docx  README.md  main.py  pyproject.toml  requirements.txt  requirements_archive.txt  startup.json  test.json  test_bleuscore.json  test_recheck.json  wiley_pdf_batch_download.py
PDF-TF-chem/: 2_caption_retrieval_model.py  PDF-ChemParse-VL.py  README.md  batch_proc_pdf_to_table_figures_retrainedmodel.py  dl_captions_html.py  ocr_evaluation_20241030.ipynb  pdf_tf_chem.py  prepare_florence_training_dataset.py  test.ipynb
Prompts/: 0_base_prompt.txt  0_inbuilt_keyvaluepairs.txt  README.md  base_prompt.txt  electrosynthesis_step1_get_rxn_opt_prompt.txt  get_data_prompt.txt  rxn_opt_prompt_v5_2.txt  update_dict_prompt.txt
TF_to_json/: README.md  TF_to_json.py  TF_to_json_main.py  TF_to_json_methods.py  TF_to_json_w_smiles.py  batch_img_cropper.py  prompt_test.ipynb  pubchemAPI_test.ipynb  requirements.txt
agent/: mermaid_tools.py
archive/: 1_compile_rename_tfid_output.py  ocr_evaluation.ipynb.orig
coco-annotator/: prepare_florence_training_dataset.py
dataraider/: README.md  TF_to_json_main.py  TF_to_json_methods.py  __init__.py  api_access.py  filter_image.py  image_cropping.py  new_req.txt  postprocess.py  process_images.py  processor_info.py  reaction_dictionary_formating.py  requirements.txt  setup.py
graph_mod/: gen_test.py  janus.py  oai.py  parse_test.py  schema.py
kgwizard/: __main__.py  gen_test.py  parse_test.py
mermaid/: methods_dataraider.py  methods_visualheist.py  postprocess.py  postprocess.py.orig  startup.json  (+3 more)
(+1008 files in other folders)
